started bundling python3 code in stats_oecd module
* stats_oecd.py is still being commented out and debugged for
  generality.
* the jupyter notebook needs to be cleaned up (and renamed)
  once module is done.

--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false
    },
@@ -11,47 +11,64 @@
     "import json\n",
     "import urllib.request\n",
     "import pandas as pd\n",
-    "import copy"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "\"idd_base_url = 'http://stats.oecd.org/sdmx-json/data/IDD'\\ndimension_filter = 'all' # grab all data\\ntime_filter = 'all?startTime=2001&endTime=2014'\\noptional_filters = '&detail=Full' # pick up the measure unit's...\""
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "\"\"\"idd_base_url = 'http://stats.oecd.org/sdmx-json/data/IDD'\n",
-    "dimension_filter = 'all' # grab all data\n",
-    "time_filter = 'all?startTime=2001&endTime=2014'\n",
-    "optional_filters = '&detail=Full' # pick up the measure unit's...\"\"\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "def fetch_oecd_data(idd_base_url = 'http://stats.oecd.org/sdmx-json/data/IDD',\n",
-    "                    dimension_filter = 'all', # grab all data\n",
-    "                    time_filter = 'all?startTime=2001&endTime=2014',\n",
-    "                    # pick up the measure unit's...\n",
-    "                    optional_filters = '&detail=Full'): \n",
+    "import copy\n",
+    "\n",
+    "\n",
+    "\n",
+    "def fetch_and_reshape_oecd_json(data_code,\n",
+    "                                dimension_filter = 'all',\n",
+    "                                time_and_other_filters = 'all?detail=Full'): \n",
+    "    \"\"\"\n",
+    "    the stats.oecd.org api [documentation](https://data.oecd.org/api/sdmx-json-documentation/)\n",
+    "    outlines the taxonomy of a data request as:\n",
+    "    \n",
+    "    stats.oecd.org/sdmx-json/data/datasetcode/dimension_filter/time_and_other_filters\n",
+    "    \n",
+    "    E.g., say\n",
+    "    * we want the \"Growth in GDP per capita, productivity and ULC\" data\n",
+    "        + the data code is PDB_GR\n",
+    "    * we want stats for Australia and USA\n",
+    "        + their location codes are AUS, USA\n",
+    "    * we're interested in \"GDP per capita, constant prices\", and \"GDP per hour worked, constant prices\"\n",
+    "        + their measure codes are T_GDPPOP_V, T_GDPHRS_\n",
+    "    * and we want to look at these measures through the perspectives of \n",
+    "        + a valued indexed according to measure at 2010\n",
+    "            - this has attribute code 2010Y\n",
+    "        + Annual growth/change,\n",
+    "            - this has attribute code GR\n",
+    "        + Average growth rate\n",
+    "            - this has attribute code AVGRW\n",
+    "    * we want all data between 1970 and 2014\n",
+    "        + we can use the filter \"all?startTime=1970&endTime=2014\"\n",
+    "    * we want the full detail of the data:\n",
+    "        + append \"&detail=Full\" to our time filter\n",
+    "    \n",
+    "    According to the API, we separate dimension and other filters by \"/\", and\n",
+    "    inside the dimension filter we concatenate with \"+\" and separate with \".\".\n",
+    "    Hence, our request would look like:\n",
+    "        \n",
+    "    http://stats.oecd.org/restsdmx/sdmx.ashx/GetData/PDB_GR/AUS+USA.T_GDPPOP_V+T_GDPHRS_V.2010Y+GRW+AVGRW/all?startTime=1970&endTime=2014&detail=Full\n",
+    "    \n",
+    "    If we just want to grab all data, and filter later (I highly suggest this):\n",
+    "    \n",
+    "    http://stats.oecd.org/restsdmx/sdmx.ashx/GetData/PDB_GR/all/all?detail=Full\n",
+    "    \n",
+    "    Unfortunately, the way the data is setup, your data comes back as in JSON format,\n",
+    "    but the dataset spec is in XML and can be accessed via\n",
+    "    \n",
+    "    http://stats.oecd.org/restsdmx/sdmx.ashx/GetDataStructure/datasetcode\n",
+    "    \n",
+    "    For reshaping the data, the XML isn't necessary -- just fetch the data with \"detail=Full\"\n",
+    "    in the request.\n",
+    "    \n",
+    "    Example input for a request for Income Disparity Data:\n",
+    "    \n",
+    "    idd_base_url = 'http://stats.oecd.org/sdmx-json/data/IDD'\n",
+    "    dimension_filter = 'all' # grab all data\n",
+    "    time_filter = 'all?startTime=2001&endTime=2014'\n",
+    "    optional_filters = '&detail=Full' # pick up the measure unit's...\n",
+    "    \"\"\"\n",
+    "\n",
     "    \"\"\"parse json data into DataFrame:\n",
     "\n",
     "    the json comes with a 'structure' section which explains how to\n",
@@ -61,7 +78,8 @@
     "    dimension names (and order) is. Then, we need to unpack\n",
     "    observation values into floats (as opposed to arrays)\n",
     "    \"\"\"\n",
-    "    data_query = idd_base_url + '/' + dimension_filter + '/' + time_filter + optional_filters\n",
+    "    idd_base_url = \"http://stats.oecd.org/restsdmx/sdmx.ashx/GetData/\" \n",
+    "    data_query = idd_base_url + '/' + data_code + '/' + dimension_filter + '/' + time_and_other_filters\n",
     "    stats_oecd_idd = json.loads(urllib.request.urlopen(data_query).read().decode('utf-8'))\n",
     "\n",
     "    metadata_stats_oecd_idd = stats_oecd_idd['structure']['dimensions']\n",
@@ -115,17 +133,8 @@
     "                        how='outer')\n",
     "\n",
     "        idd_dataframe = idd_dataframe.append(data, ignore_index=False)\n",
-    "    return idd_dataframe, metadata_stats_oecd_idd, observation_attribute_map"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
+    "    return idd_dataframe, metadata_stats_oecd_idd, observation_attribute_map\n",
+    "\n",
     "def append_metadata_to_oecd_stats(idd_dataframe, metadata_stats_oecd_idd, observation_attribute_map):\n",
     "    \"\"\"\n",
     "    Append meta data to OECD stats dataframe:\n",
@@ -170,17 +179,8 @@
     "                                 right=df,\n",
     "                                 how='left',\n",
     "                                 on=key)\n",
-    "    return idd_dataframe"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
+    "    return idd_dataframe\n",
+    "\n",
     "def fetch_and_format_oecd_data(idd_base_url = 'http://stats.oecd.org/sdmx-json/data/IDD',\n",
     "                               dimension_filter = 'all', # grab all data\n",
     "                               time_filter = 'all?startTime=2001&endTime=2014',\n",
@@ -243,7 +243,7 @@
    },
    "outputs": [],
    "source": [
-    "X.to_csv(\"/Users/user/repos/middle_middle/oecd_idd.csv\",index=False,header=True)"
+    "X.to_csv(\"~/repos/middle_middle/oecd_idd.csv\",index=False,header=True)"
    ]
   }
  ],
@@ -263,7 +263,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.1"
+   "version": "3.3.5"
   }
  },
  "nbformat": 4,
